--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server-barang": "npx json-server --watch data/databarang.json --port 8000",
+    "server-checkout": "npx json-server --watch data/barang.json --port 8001"
   },
   "eslintConfig": {
     "extends": [
